--- a/css/style.css
+++ b/css/style.css
@@ -204,24 +204,26 @@ footer {
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 @media (max-width: 768px) {
-    .grid {
-        grid-template-columns: 1fr 1fr;
+    header ul {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
     }
-    
-    .projet {
-        grid-template-columns: 1fr;   
+    .grid, .projet{
+        grid-template-columns: 1fr;
     }
+
     .center, .container-center {
         padding: 20px;
     }
 
 
-    header ul {
+    /* header ul {
         flex-direction: column;
-    }
+    } */
 
     .image img {
-        max-width: 300px;
+        max-width: 200px;
     }
 }
 
@@ -230,8 +232,15 @@ footer {
         font-size: 1.2rem;
     }
     .center .button, .button {
-        padding: 8px 15px;
+        padding: 8px 12px;
         font-size: 0.9rem;
+    }
+    header {
+        padding: 10px;
+    }
+
+    header ul {
+        gap: 5px;
     }
 }
 
